--- a/mainmenu.html
+++ b/mainmenu.html
@@ -34,13 +34,13 @@ document.getElementById("mainmenu").className = "nicewindow animated fadeIn";
 
 <div id="mainmenu" class="nicewindow" style="display:none;">
 
-<h1>I am new to AgriBaba</h1>
+<h1>Register as a</h1>
 
-<div class="windowbutton">Register</div>
+<div class="windowbutton" onClick="letsgo();">Producer</div>
 
-<h1>I already have an account</h1>
+<div class="windowbutton">Transporter</div>
 
-<div class="windowbutton">Login</div>
+<div class="windowbutton">Buyer</div>
 
 <br>
 
