--- a/mainmenu.html
+++ b/mainmenu.html
@@ -36,11 +36,13 @@ document.getElementById("mainmenu").className = "nicewindow animated fadeIn";
 
 <h1>Register as a</h1>
 
-<div class="windowbutton" onClick="letsgo();">Producer</div>
+<div class="windowbutton" onClick="letsgo();">Producer / Farmer</div>
 
 <div class="windowbutton">Transporter</div>
 
-<div class="windowbutton">Buyer</div>
+<div class="windowbutton">Buyer / Wholeseller</div>
+
+<div class="windowbutton">Farm Supplier</div>
 
 <br>
 
