--- a/mainmenu.html
+++ b/mainmenu.html
@@ -44,6 +44,10 @@ document.getElementById("mainmenu").className = "nicewindow animated fadeIn";
 
 <div class="windowbutton">Farm Supplier</div>
 
+<div class="windowbutton">Consultant</div>
+
+<div class="windowbutton">Government / NGO</div>
+
 <br>
 
 </div>
