--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ document.getElementById("startmenu").className = "nicewindow animated fadeIn";
 
 <h1>I already have an account</h1>
 
-<div class="windowbutton">Login</div>
+<div class="windowbutton" onClick="logingo();">Login</div>
 
 <br>
 
